--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Prework Study Guide</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,7 +18,9 @@
     <section class="card" id="html-section">
       <h2>HTML</h2>
       <ul>
-        <li><h3>Enter your HTML Notes here:</h3></li>
+        <li>
+          <h3>Enter your HTML Notes here:</h3>
+        </li>
         <li>The head element contains information about the webpage.</li>
         <li>The body element represents the visible content shown to the user.</li>
       </ul>
@@ -26,14 +29,20 @@
     <section class="card" id="css-section">
       <h2>CSS</h2>
       <ul>
-        <li><h3>Enter your CSS notes here</h3></li>
+        <li>
+          <h3>Enter your CSS notes here</h3>
+        </li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
+        <li>A padding indicates how much space we want around the content inside an element.</li>
       </ul>
     </section>
 
     <section class="card" id="git-section">
       <h2>Git</h2>
       <ul>
-        <li><h3>Enter your GiT notes here:</h3></li>
+        <li>
+          <h3>Enter your GiT notes here:</h3>
+        </li>
         <li>git status: checks what branch we are currently on</li>
         <li>git checkout -b branch-name: creates a new branch and switches to it</li>
       </ul>
@@ -42,7 +51,9 @@
     <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li><h3>Enter your JavaScript notes here</h3></li>
+        <li>
+          <h3>Enter your JavaScript notes here</h3>
+        </li>
       </ul>
     </section>
   </main>
