--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
       <ul>
         <li>
           <h3>Enter your JavaScript notes here</h3>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
         </li>
       </ul>
     </section>
